--- a/members.adoc
+++ b/members.adoc
@@ -14,7 +14,7 @@ If you think some information is outdated, either provide a pull request or send
 |Etienne Koekemoer, Gareth Filer, Jonathan Meyler
 
 |BANFICO
-|Arun Ganesh, Kannan Rasappan, Pritish Joshi
+|Arun Ganesh / Automation Tester (@arunganesh-a), Kannan Rasappan / Architect (@kannan-ra), Pritish Joshi / Java Developer (@pritish-nitb)
 
 |Hitachi
 |Yuichi Nakamura, Takashi Norimatsu
